fixed font not showing

--- a/app/global.scss
+++ b/app/global.scss
@@ -50,7 +50,7 @@ html {
   box-sizing: border-box;
 }
 body {
-  font-family: 'Outfit', 'Oswald', sans-serif;
+  font-family: var(--font-primary), var(--font-secondary), sans-serif;
   background-color: var(--clr-main--bg);
   color: var(--clr-dark-gray);
   line-height: 1.6;
